--- a/src/components/footer/footer.njk
+++ b/src/components/footer/footer.njk
@@ -81,7 +81,7 @@
     authorTagline = 'Digital компания с погружением в бизнес',
     authorLogo = 'images/logos/logo-author.svg'
 ) -%}
-    <footer class="footer" role="contentinfo">
+    <footer class="footer appearance-animation" role="contentinfo">
         <div class="footer__container">
             <div class="footer__row">
                 <div class="footer__column is-first">
