--- a/src/components/subscribe/subscribe.njk
+++ b/src/components/subscribe/subscribe.njk
@@ -11,7 +11,7 @@
     teaser = 'Подписывайтесь на удобный для Вас мессенджер'
 ) -%}
     {% call Section(className = 'subscribe', container = 'subscribe__container') %}
-        <div class="subscribe__wrapper">
+        <div class="subscribe__wrapper appearance-animation from-bottom">
             <div class="subscribe__info">
                 <h2 class="subscribe__title">{{ title | safe }}</h2>
                 <p class="subscribe__teaser">{{ teaser }}</p>
