--- a/src/scss/utils/_config.scss
+++ b/src/scss/utils/_config.scss
@@ -25,6 +25,7 @@ $breakpointCoverages: 'only', 'down', 'up';
 // Site colors.
 // color-1
 $color-1--1: #ffd600 !default;
+$color-1--2: #eebf55 !default;
 
 // Grey color
 $color-3--1: #e6e6e6 !default;
@@ -43,6 +44,10 @@ $color-3--13: #959595 !default;
 $color-3--14: #ececec !default;
 $color-3--15: #dfdfdf !default;
 $color-3--16: #dedede !default;
+$color-3--17: #1e1e1e !default;
+$color-3--18: #ebebeb !default;
+$color-3--19: #e8e8e8 !default;
+$color-3--20: #f6f6f6 !default;
 
 // Neutral colors
 $color-black: #000;
