--- a/src/components/cover/_cover.scss
+++ b/src/components/cover/_cover.scss
@@ -1,10 +1,6 @@
 .cover {
     &.section {
-        margin: 113px 0 0;
-
-        @include breakpoint(medium down) {
-            margin: 83px 0 0;
-        }
+        margin: 0;
     }
 
     &__container {
