--- a/src/components/excursions/_excursions.scss
+++ b/src/components/excursions/_excursions.scss
@@ -19,12 +19,10 @@
 
     .section {
         &__title {
-            .title {
-                padding-bottom: 82px;
+            margin-bottom: 82px;
 
-                @include breakpoint(small down) {
-                    padding-bottom: 30px;
-                }
+            @include breakpoint(small down) {
+                margin-bottom: 30px;
             }
         }
 
