--- a/src/components/main-menu-toggle/_main-menu-toggle.scss
+++ b/src/components/main-menu-toggle/_main-menu-toggle.scss
@@ -4,6 +4,7 @@
     align-items: center;
     background-color: transparent;
     border: none;
+    cursor: pointer;
     display: flex;
     justify-content: center;
     padding: 10px 0;
