--- a/src/components/search/_search-nav.scss
+++ b/src/components/search/_search-nav.scss
@@ -24,6 +24,7 @@
         background-color: $color-3--10;
         border: none;
         border-radius: 25px;
+        cursor: pointer;
         padding: 11.5px 28px;
 
         @include on-event() {
