--- a/src/scss/core-components/_form-input.scss
+++ b/src/scss/core-components/_form-input.scss
@@ -4,19 +4,19 @@
 
 %input-general-styles {
     @include focus-outline;
-    @include font($typo-1, 1.5rem, $medium);
-    background-color: $color-white;
+    @include font($typo-1, 1.5rem, $normal);
+    background-color: $color-3--10;
     border: 0;
-    border-radius: 28px;
+    border-radius: 25px;
     color: $color-3--5;
     margin: 0;
     min-height: 50px;
     overflow: hidden;
-    padding: 0 10px;
+    padding: 0 23px;
     width: 100%;
 
     &::placeholder {
-        @include font($typo-1, 1.5rem, $medium);
+        @include font($typo-1, 1.5rem, $normal);
         @include trs();
         color: $color-3--8;
         opacity: 1;
