--- a/src/scss/core-components/_title.scss
+++ b/src/scss/core-components/_title.scss
@@ -2,12 +2,10 @@
     @include font($typo-1, 3.6rem, $extrabold);
     color: $color-black;
     line-height: 1.25;
-    padding-bottom: 63px;
     position: relative;
 
     @include breakpoint(small down) {
         font-size: 2.6rem;
-        padding-bottom: 38px;
     }
 
     &__text {
@@ -21,6 +19,14 @@
 
         @include breakpoint(small down) {
             font-size: 1.4rem;
+        }
+    }
+
+    &.is-primary {
+        @include font($typo-1, 4.2rem, $bold);
+
+        @include breakpoint(small down) {
+            font-size: 3.2rem;
         }
     }
 
