--- a/src/scss/layouts/_site-content.scss
+++ b/src/scss/layouts/_site-content.scss
@@ -3,10 +3,14 @@
         @extend %container;
         display: flex;
         flex-wrap: wrap;
-        padding-bottom: 70px;
-        padding-top: 90px;
+        padding-bottom: 0;
+        padding-top: 47px;
         position: relative;
         z-index: 0;
+
+        .is-detail & {
+            @extend %container-sm;
+        }
     }
 
     &__main {
@@ -20,40 +24,5 @@
         > *:last-child {
             margin-bottom: 0;
         }
-    }
-
-    &__sidebar {
-        padding: 0 0 0 60px;
-        width: 380px;
-
-        @include breakpoint(medium down) {
-            padding: 0;
-            width: 100%;
-        }
-
-        &.is-left {
-            order: -2;
-            padding: 0 60px 0 0;
-
-            @include breakpoint(medium down) {
-                padding: 0;
-            }
-        }
-
-        &.is-facets {
-            margin-left: -30px;
-            order: -2;
-            padding: 0 90px 0 0;
-
-            @include breakpoint(medium down) {
-                margin: 0;
-                padding: 0;
-                width: 0;
-            }
-        }
-    }
-
-    &__top {
-        background-color: $color-3--4;
     }
 }
