[BUGFIX] - HTML/CSS - IOS bug fixes

--- a/src/components/blog/_blog.scss
+++ b/src/components/blog/_blog.scss
@@ -61,6 +61,7 @@
     &__item {
         margin-bottom: 68px;
         padding: 0 23px;
+        opacity: 1;
 
         @include breakpoint(small down) {
             margin-bottom: 20px;
