--- a/src/scss/core-components/_form-input.scss
+++ b/src/scss/core-components/_form-input.scss
@@ -9,6 +9,7 @@
     border: 0;
     border-radius: 25px;
     color: $color-3--5;
+    flex-grow: 1;
     margin: 0;
     min-height: 50px;
     overflow: hidden;
