[BUGFIX] - HTML/CSS - Firefox bug fixes

--- a/src/components/advantages/_advantages.scss
+++ b/src/components/advantages/_advantages.scss
@@ -18,7 +18,7 @@
     &__list {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: center;
 
         @include breakpoint(medium down) {
             justify-content: center;
