--- a/src/components/cover/cover.njk
+++ b/src/components/cover/cover.njk
@@ -29,7 +29,7 @@
                                     {{ Icon('far fa-calendar', title="Дата") }}
                                     <span class="ghost">Дата</span>
                                 </label>
-                                <input name="field-date" id="field-date" type="date" class="form__field" title="дд/мм/гггг" min="1900-01-01" max="3000-12-31">
+                                <input name="field-date" id="field-date" type="date" class="form__field" min="1900-01-01" max="3000-12-31">
                             </div>
                         </div>
                     </div>
