--- a/src/scss/core-components/_form-input.scss
+++ b/src/scss/core-components/_form-input.scss
@@ -13,7 +13,8 @@
     margin: 0;
     min-height: 50px;
     overflow: hidden;
-    padding: 0 23px;
+    padding: 14px 23px;
+    text-overflow: ellipsis;
     width: 100%;
 
     &::placeholder {
